Fixed navbar stickiness and home section spacing

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@
 
 * {
   scroll-behavior: smooth;
+  scroll-padding-top: 100px;
 }
